--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     // pac4j
     compile 'org.pac4j:pac4j-oidc:3.0.2'
     compile 'org.pac4j:pac4j-jwt:3.0.2'
+    compile 'org.pac4j:pac4j-cas:3.0.2'
 }
 
 check.dependsOn.clear()
